Fixed alignment

--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -19,6 +19,11 @@ body {
   left: 50%;
 }
 
+.sprite {
+  min-height: 100%;
+  min-width: 100%;
+}
+
 .pokemon-grid {
   margin-top: 30px;
   display: grid;
